Implement ColorsEditor window to change messages colors

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "com.agava.smartlogger",
+    "name": "org.marrius.smart-logger",
     "version": "1.0.0",
     "description": "Smart logger that's able to print your logs pretty.",
     "displayName": "Smart Logger",
